# surge

./: .gitignore  BUILD_SUCCESS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEMO.md  DEVELOPMENT_NOTES.md  GETTING_STARTED.md  LICENSE  PHASE2_SUMMARY.md  PROJECT_SUMMARY.md  Package.resolved  Package.swift  QUICKSTART.md  README.md  RENAME_COMPLETE.md  SURGE.md  TODO.md  UI_GUIDE.md  install.sh
Documentation/: ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md
Resources/: signatures.json
Scripts/: build-app-bundle.sh  build.sh  install.sh  run.sh  setup.sh  test.sh
Sources/PrivilegedHelper/: XPCServer.swift  launchd.plist  main.swift
Sources/PrivilegedHelper/PrivilegedOperations/: AppUninstaller.swift  DiskScanner.swift  DuplicateFinder.swift  LargeOldFileFinder.swift  MaintenanceRunner.swift  MemoryOptimizer.swift  SecurityScanner.swift  StartupItemsManager.swift  SystemCleaner.swift  SystemMonitor.swift  TreeMapScanner.swift
Sources/PrivilegedHelper/Security/: BrowserExtensionScanner.swift  ClientValidator.swift  (+2 more)
Sources/Shared/: TreeMapModels.swift  XPCProtocol.swift
Tests/PrivilegedHelperTests/: SignatureDatabaseTests.swift
Tests/SURGETests/: CleanupCoordinatorTests.swift  SanitizerTests.swift  SmartCareViewModelTests.swift  TreeMapLayoutTests.swift
src/: main.rs
src/app/: mod.rs  state.rs
src/models/: mod.rs
src/operations/: mod.rs
src/scanner/: cleanup.rs  duplicates.rs  large_files.rs  mod.rs  treemap.rs
src/security/: blacklist.rs  mod.rs  sanitizer.rs
src/system/: stats.rs
src/ui/: common.rs  mod.rs
(+38 files in other folders)
