[package]
name = "surge-tui"
version = "2.0.0"
edition = "2021"
authors = ["SURGE Contributors"]
description = "Cross-platform system cleaner and optimizer for macOS and Linux"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# File Operations
walkdir = "2.4"
sha2 = "0.10"

# System Information
sysinfo = "0.30"

# CLI & Error Handling
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
